apps/demo40/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo40
  namespace: demo40
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo40
  template:
    metadata:
      labels:
        app: demo40
    spec:
      containers:
        - name: demo40
          image: 490529426410.dkr.ecr.us-east-1.amazonaws.com/demo40:ac7aabc28ed886f7780cb985d6dba4ab8d0f63e8
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
