apps/demo40/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo40
  namespace: demo40
spec:
  selector:
    app: demo40
  ports:
    - port: 80
      targetPort: 8080
