apps/demo40/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo40
  namespace: demo40
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
              - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo40
                port:
                  number: 80
